# tdcat

./: .editorconfig  .gitignore  Cargo.toml
src/: main.rs  schema.rs  tabdata.rs
src/formats/: mod.rs
